# beemon

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bff  Dockerfile.daemon  Dockerfile.ui  Makefile  PLAN.md  README.md  build.rs  docker-compose.yaml  rust-toolchain.toml  test-network.go
beemon-aggregator/: Cargo.toml  Makefile  build.rs  rust-toolchain.toml
beemon-aggregator/src/: main.rs  pb.rs
kernelspace/: Makefile  beemon.bpf.c
kernelspace/arm64/: beemon.bpf.c  vmlinux.h
kernelspace/x86_64/: beemon.bpf.c  vmlinux.h
protobuf/: Makefile  buf.gen.yaml  buf.yaml  go.mod  go.sum
protobuf/api/v1/: beemon.proto
protobuf/swagger-ui/: index.html
src/: config.rs  convert.rs  lib.rs  main.rs  pb.rs  rates.rs  ringbuf.rs  stream.rs
src/bpf/: loader.rs  maps.rs  mod.rs  types.rs
src/http/: mod.rs  routes.rs  ws.rs
src/snapshot/: cache.rs  cgroup.rs  cgroup_tree_cache.rs  details.rs  host.rs  manager.rs  mod.rs  namespace_tree_cache.rs  proc_cache.rs  procfields.rs  scanner.rs
userspace/: .gitignore  Cargo.toml  Makefile  beemon_x86_bpfel.go  bpf_amd64.go  bpf_arm64.go  build.rs  config.go  ebpf_test.go  event.go  event_test.go  fsnotify.go  fsnotify_test.go  generate.go  go.mod  go.sum  helpers.go  helpers_test.go  link.go  link_test.go  main.go  namespace.go  namespace_test.go  rust-toolchain.toml  snapshot.go  snapshot_test.go
userspace/src/: config.rs  convert.rs  grpc.rs  lib.rs  main.rs  pb.rs  rates.rs  ringbuf.rs  stream.rs
userspace/src/bpf/: loader.rs  maps.rs  mod.rs  types.rs
userspace/src/snapshot/: cache.rs  cgroup.rs  cgroup_tree_cache.rs  details.rs  host.rs  manager.rs  mod.rs  namespace_tree_cache.rs  proc_cache.rs  procfields.rs  scanner.rs
userspace/tests/: bpf_integration.rs
webui/: Makefile  nginx.conf  package-lock.json  package.json  vite.config.ts
webui/bff/: Cargo.toml  Makefile  build.rs  config.go  go.mod  go.sum  helpers.go  main.go  main_test.go  sse.go  ws.go
webui/bff/assets/swagger/: beemon.swagger.json
webui/bff/src/: config.rs  grpc.rs  ws.rs
webui/src/components/: Dashboard.tsx  ProcessStream.tsx  ThemeToggle.tsx
webui/src/lib/: types.ts
webui/src/lib/proto/api/v1/: beemon.ts
webui/src/lib/proto/google/api/: http.ts
webui/src/lib/proto/google/protobuf/: duration.ts  timestamp.ts
webui/src/pages/: NamespaceDetails.tsx  ProcessDetails.tsx
webui/ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
webui/ui/src/: App.tsx  index.css
webui/ui/src/components/: Dashboard.tsx  ManagerBadge.tsx  ProcessStream.tsx  StateBadge.tsx
webui/ui/src/lib/: types.ts
webui/ui/src/lib/proto/api/v1/: beemon.ts
webui/ui/src/lib/proto/buf/validate/: validate.ts
webui/ui/src/lib/proto/google/protobuf/: descriptor.ts  field_mask.ts
webui/ui/src/pages/: NamespaceDetails.tsx  ProcessDetails.tsx
