[package]
name = "beemon-bff"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "beemon-bff"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
bytes = "1"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
pbjson = "0.7"

[build-dependencies]
tonic-prost-build = { version = "0.14", default-features = false, features = ["transport"] }
prost-build = "0.14"
pbjson-build = "0.7"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
